[tool.poetry]
name = "kosmorrolib"
version = "1.0.1"
description = "A library to computes the ephemerides."
authors = ["Jérôme Deuchnord <jerome@deuchnord.fr>"]
license = "AGPL-v3"

[tool.poetry.dependencies]
python = "^3.7"
skyfield = "^1.21.0"
skyfield-data = "^3.0.0"
numpy = "^1.17.0"
python-dateutil = "2.8.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
parameterized = "^0.8.1"
coverage = "^6.1.2"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
